[tool.poetry]
name = "muse-inference-paper"
version = "0.1.0"
description = ""
authors = ["Marius Millea <mariusmillea@gmail.com>"]

[tool.poetry.dependencies]
emcee = "^3.1.2"
ipykernel = "^6.7"
ipympl = "^0.9.2"
ipython = "^7"
jax = {extras = ["cuda"], version = "^0.3"}
jaxlib = "^0.3"
jaxopt = "^0.4.3"
numpy = ">=1.17.0, <=1.22.4"
numpyro = "^0.10.0"
python = "^3.9"
scipy = "^1.4.1"
tqdm = "^4"
ttictoc = "^0.5.6"
muse-inference = {git = "https://github.com/marius311/muse_inference.git", rev = "b2a29cd"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "jorenham/jax_pep503"
url = "https://jorenham.github.io/jax_pep503/"
secondary = true
